<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_gray"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/main_tab_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/bottom1"
                android:gravity="bottom"
                android:orientation="horizontal"
                 >

                <RadioButton
                    android:id="@+id/m_new"
                    style="@style/MMTabButton"
                    android:layout_weight="1.0"    
                    android:drawableTop="@android:drawable/ic_menu_edit"
                    android:text="@string/m_new" />

                <RadioButton
                    android:id="@+id/m_event"
                    style="@style/MMTabButton"
                    android:layout_weight="1.0"
                    android:checked="true"
                    android:drawableTop="@android:drawable/ic_menu_agenda"
                    android:text="@string/m_event" />

                <RadioButton
                    android:id="@+id/m_map"
                    style="@style/MMTabButton"
                    android:layout_weight="1.0"
                    android:drawableTop="@android:drawable/ic_menu_mapmode"
                    android:text="@string/m_map" />
                
                <RadioButton
                    android:id="@+id/m_contact"
                    style="@style/MMTabButton"
                    android:layout_weight="1.0"
                    android:drawableTop="@android:drawable/ic_menu_call"
                    android:text="@string/m_contact" />


            </RadioGroup>

            
        </FrameLayout>
    </LinearLayout>

</TabHost>